# treasure-mark

./: .env.example  .gitignore  CNAME  IFLOW.md  IFLOW_backup.md  index.html  package-lock.json  package.json  query  vite.config.chrome.ts  vite.config.ts
.github/workflows/: deploy.yml
src/: App.vue  OptionsApp.vue  PopupApp.vue  background.ts  content.ts  main.ts  manifest.json  options.html  options.ts  popup.html  popup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: BookmarkDisplay.vue  DeviceAuthModal.vue  DeviceLoginModal.vue  GroupTree.vue  UserAvatar.vue
src/router/: index.ts
src/services/: gist.ts
src/stores/: bookmarks.ts  groups.ts  user.ts
src/views/: AuthCallbackView.vue  BookmarksView.vue  HomeView.vue
